styles/custom-dnd5e-character-sheet.css
.custom-dnd5e.dnd5e2 h3.icon {
    border-bottom: 1px solid var(--dnd5e-color-gold);
}

.custom-dnd5e.dnd5e2.sheet.actor.character {
    --dnd5e-sheet-header-height: 100px;
    --dnd5e-sheet-sidebar-width: 200px;
    min-height: 500px;
    min-width: 500px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-header {
    display: flex;
    font-size: var(--font-size-23);
    gap: 0.375rem;
    flex-wrap: nowrap;
    padding-top: 25px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-header .document-name {
    font-size: var(--font-size-30);
    letter-spacing: 1px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.custom-dnd5e.dnd5e2.sheet.actor.character form.collapsed .sheet-header > .left:is(.optional-ability-1, .optional-ability-2) .document-name {
    font-size: var(--font-size-30);
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-header > .left {
    gap: 0;
    min-width: 240px;
    padding: 0 0.5rem 0 1rem;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .sheet-header
    > .left
    .document-name {
    font-size: var(--font-size-30);
    letter-spacing: 1px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-header > .right {
    --level-size: 60px;
    --padding-right: 1rem;
    flex-direction: row-reverse;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-header > .right .level {
    font-size: var(--font-size-23);
    margin-left: 25px;
    min-width: var(--level-size);
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .sheet-header
    > .right
    > div:last-child {
    flex-direction: column;
    margin-top: 0;
    gap: 0;
    justify-content: center;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .sheet-header
    > .right
    > div:last-child
    .sheet-header-buttons {
    gap: 0.25rem;
    position: unset;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .sheet-header
    > .right
    > div:last-child
    .xp-bar {
    display: none;
    height: 0;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-header > .right > div:last-child .xp-label {
    justify-content: end;
    padding-right: 0.1rem;
    padding-top: 0.25rem;

}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .sidebar {
    margin-top: 0.5rem;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .sidebar .card .death-tray .death-saves {
    justify-content: center;
    width: calc(var(--dnd5e-sheet-sidebar-width) - 10px);
}

.custom-dnd5e.dnd5e2 .top .pips:first-child {
    padding: 0.5rem 0rem 0.5rem 0.375rem;
    gap: 0.25rem;
}

.custom-dnd5e.dnd5e2 .top .pips:last-child {
    padding: 0.5rem 0.375rem 0.5rem 0rem;
    gap: 0.25rem;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .sidebar .card .stats .top .ac {
    padding-bottom: 0.25rem;
}

.custom-dnd5e.dnd5e2 .death-saves .pips:first-child {
    padding: 0.5rem 0.25rem 0.5rem 0.375rem;
    gap: 0.25rem;
}

.custom-dnd5e.dnd5e2 .death-saves .pips:last-child {
    padding: 0.5rem 0.375rem 0.5rem 0.25rem;
    gap: 0.25rem;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .main-content {
    padding-top: 0;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    left: 0;
    position: relative;
    top: -2px;
    width: 100%;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .top {
    padding-right: 0;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows {
    display: flex;
    flex-direction: column-reverse;
    flex-wrap: wrap;
    justify-content: space-around;
    margin-left: unset;
    padding: 0;
    padding-bottom: 0.25rem;
    width: unset;
}

@container (min-width: 700px) {
    .custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows {
        align-content: space-evenly;
        gap: 0rem;
        justify-content: center;
        margin: 0;
        padding-top: 0rem;
        width: unset;
    }
}

.custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows > div {
    flex-wrap: wrap;
    justify-content: space-evenly;
    min-height: 0;
    column-gap: 1rem;
    row-gap: 0.75rem;
    flex-wrap: wrap;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .ability-score {
    height: 50px;
    padding-top: 0.375rem;
    width: 50px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .ability-scores
    .ability-score::before {
    background: unset;
    background-color: var(--dnd5e-color-parchment);
    border: 2px solid var(--dnd5e-color-gold);
    height: 44px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .ability-score .mod {
    line-height: normal;
    margin-top: -2px;
    padding: 0 0 0.1rem 0;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .ability-scores
    .ability-score
    .score {
    font-size: var(--font-size-13);
    height: 22px;
    margin-top: -1px;
    padding: 0.2rem;
    width: 40px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .ability-scores
    .ability-score
    .score
    > input {
    height: 22px;
    width: 40px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .tab-body .tab:not(.details) {
    padding-top: 0.5rem;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .tab-body .col-2 {
    --skills-col-width: 230px;
    display: flex;
    gap: 0.5rem;
    flex: 1 1 var(--skills-col-width);
    flex-direction: row;
    flex-wrap: wrap;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .tab-details .tab-body {
    display: flex;
    padding-top: 0;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .saves {
    min-width: 230px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .details .pills-lg {
    min-width: 160px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .tab-body .col-2 > .left,
.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .tab-body .col-2 .right {
    flex: 1 1 210px;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .tab-body .col-2 > .left {
    flex-wrap: wrap;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .sheet-body
    .tab-body
    .col-2
    > .left
    .skills {
    min-width: var(--skills-col-width);
}

.custom-dnd5e.dnd5e2 dnd5e-inventory {
    gap: 0.5rem;
}

.custom-dnd5e.dnd5e2 dnd5e-inventory .top {
    column-gap: 1rem;
    flex-wrap: wrap;
    row-gap: 0.25rem;
}

.custom-dnd5e.dnd5e2 dnd5e-inventory .containers {
    min-width: 125px;
}

.custom-dnd5e.dnd5e2 section.currency {
    column-gap: 0.5rem;
    row-gap: 0.25rem;
}

.custom-dnd5e.dnd5e2 section.currency input {
    padding: 0.25rem;
    text-align: center;
}

.custom-dnd5e.dnd5e2 dnd5e-inventory .middle {
    flex-wrap: wrap;
}

.custom-dnd5e.dnd5e2 dnd5e-inventory .middle item-list-controls {
    min-width: 230px;
}

.custom-dnd5e.dnd5e2 dnd5e-inventory .middle .attunement {
    min-height: 24px;
}

.custom-dnd5e.dnd5e2 .pill-lg {
    max-width: unset;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .skills > ul > li,
.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .tools > ul > li,
.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .saves > ul > li {
    padding: 0.3rem 0rem;
    gap: 0.25rem;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .skills select.ability,
.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .tools select.ability,
.custom-dnd5e.dnd5e2.sheet.actor.character .sheet-body .saves select.ability {
    margin-left: -4px;
}

@container (max-width: 500px) {
    .custom-dnd5e.dnd5e2 .items-section .items-header .item-weight,
    .custom-dnd5e.dnd5e2 .items-section .item .item-weight {
        display: none;
    }
}

@container (max-width: 520px) {
    .custom-dnd5e.dnd5e2 .items-section .items-header .item-usage,
    .custom-dnd5e.dnd5e2 .items-section .item .item-usage {
        display: none;
    }
}

@container (max-width: 450px) {
    .custom-dnd5e.dnd5e2 .items-section .items-header .item-uses,
    .custom-dnd5e.dnd5e2 .items-section .item .item-uses {
        display: none;
    }
}

@container (max-width: 480px) {
    .custom-dnd5e.dnd5e2 .items-section .items-header .item-target,
    .custom-dnd5e.dnd5e2 .items-section .item .item-target {
        display: none;
    }
}

@container (max-width: 400px) {
    .custom-dnd5e.dnd5e2 .items-section .items-header .item-range,
    .custom-dnd5e.dnd5e2 .items-section .item .item-range {
        display: none;
    }
}

@container (max-width: 375px) {
    .custom-dnd5e.dnd5e2 .items-section .items-header .item-quantity,
    .custom-dnd5e.dnd5e2 .items-section .item .item-quantity {
        display: none;
    }
}

@container (max-width: 350px) {
    .custom-dnd5e.dnd5e2 .items-section .items-header .item-roll,
    .custom-dnd5e.dnd5e2 .items-section .item .item-roll {
        display: none;
    }
}

.custom-dnd5e.dnd5e2.sheet.actor.character .tab.biography .characteristics {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .tab.biography .characteristics li {
    border-bottom: 1px solid var(--dnd5e-color-gold);
    flex: 1 1 200px;
    padding-bottom: 0.1rem;
    width: 100%;
}

.custom-dnd5e.dnd5e2.sheet.actor.character .tab.biography .characteristics label .value {
    border: 0;
}

.custom-dnd5e.dnd5e2.sheet.actor.character
    .tab.biography
    > .middle
    .textbox-half {
    min-width: 200px;
}

.dnd5e2.sheet.actor.character .sheet-body .sidebar .card .meter.hit-points.negative .progress::before {
    background: linear-gradient(to right, var(--dnd5e-color-maroon) -0%, var(--dnd5e-color-maroon) 100%);
    border-right: var(--border-width) solid var(--dnd5e-color-crimson);
    border-radius: 4px 0 0 4px;
}

